todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: le36/todo-app:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: picsum-cache
              mountPath: /data
      volumes:
        - name: picsum-cache
          persistentVolumeClaim:
            claimName: image-claim
